--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint src/ --fix"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^1.0.1",
     "@sendgrid/mail": "^8.1.5",
     "@upstash/redis": "^1.35.0",
     "bcryptjs": "^2.4.3",
@@ -27,9 +28,11 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.6.0",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "sib-api-v3-sdk": "^8.5.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
